--- a/app/components/EmojiStat/EmojiStat.module.css
+++ b/app/components/EmojiStat/EmojiStat.module.css
@@ -2,3 +2,7 @@
   display: inline-block;
   padding-right: 0.5rem;
 }
+
+.isOverloaded {
+  color: red;
+}
